--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -1,12 +1,11 @@
 <div ng-include="'views/navbar.html'"></div>
 
 <div class="container-fluid">
-    <div class="row topPage">
+    <div class="row actorTopPage">
         <div class="col-md-8">
             <div class="row">
                 <div class="col-md-7 col-sm-7 col-xs-12 movieTitle">
                     <h1>Joaquin Phoenix</h1>
-
                     <div>
                         <ul class="list-inline pointedList">
                             <li>Drama</li>
