--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -7,9 +7,7 @@
                 <div class="col-md-7 col-sm-7 col-xs-12 movieTitle">
                     <h1>Joaquin Phoenix</h1>
                     <div>
-                        <ul class="list-inline pointedList">
-                            <li>Drama</li>
-                        </ul>
+                        <p>Drama</p>
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-5 col-xs-12">
