Changement interface, ajout liste déroulante pour saison

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,6 @@
 
 body {
     padding-top: 70px;
-    padding-left: 50px;
-    padding-right: 50px;
 }
 
 .jumbotron p{
@@ -17,6 +15,6 @@ body {
     box-shadow:0 10px 10px #080808;
 }
 
-#mediaControl{
-    padding: 20px;
+.topPage {
+    padding-top: 70px;
 }
