--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,18 @@
+.background-image {
+    position: fixed;
+    background-image: url('https://leanflix-production.storage.googleapis.com/production/assets/landing/bg-landing-889bfa48452a0cc4558fe8e4bb13b411.jpg');
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
 
 body {
     padding-top: 70px;
