--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/navbar.html'"></div>
-
+<div class="background-image"></div>
 <div class="container-fluid">
     <div class="row actorTopPage">
         <div class="col-md-8">
