--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -1,6 +1,6 @@
 ﻿<div ng-include="'views/navbar.html'"></div>
 
-
+<div class="background-image"></div>
 <div class="container-fluid">
     <div class="row topPage">
         <div class="col-md-6 col-xs-12">
@@ -56,8 +56,5 @@
             </div>
         </div>
     </div>
-
-</div>
-
 
 </div>
