--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CornPub</a>
+                <a class="navbar-brand" ui-sref="home">CornPub</a>
             </div>
             <form class="navbar-form navbar-left" role="search">
                 <div class="input-group">
