--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -4,37 +4,30 @@
 <div class="container-fluid">
     <div class="row topPage">
     </div>
-    <div class="col-md-6 col-sm-7 col-xs-12">
-        <div class="row">
-            <div class="col-md-10 col-xs-12">
-                <h1>Fifty Shades Of Grey</h1>
-            </div>
-            <div class="col-md-2 col-xs-offset-0">
-                <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"
-                   style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
-            </div>
-        </div>
-        <div class="row">
-
-            <ul class="list-inline pointedList">
-                <li>Drama, Romance</li>
-                <li>11 February 2015 (France)</li>
-            </ul>
-
-            <div class="row jumbotron">
-                <p>
-                    Literature student Anastasia Steele's life changes forever when she meets handsome, yet
-                    tormented, billionaire Christian Grey.
-                </p>
-            </div>
+    <div class="row">
+        <div class="col-md-8 col-sm-8 col-xs-12">
             <div class="row">
-                <div id="mediaControl" class="col-xs-12 col-md-8">
+                <div class="col-md-6 col-sm-12 col-xs-12">
+                    <h1 class="row">Fifty Shades Of Grey</h1>
+
+                    <div class="row">
+                        <ul class="list-inline pointedList">
+                            <li>Drama, Romance</li>
+                            <li>11 February 2015 (France)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="mediaControl" class="col-md-4 col-sm-6 col-xs-12">
                     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#preview">
                         Bande annonce
                     </button>
                     <div id="preview" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Fifty Shades of Grey - Bande Annonce</h4>
+                                </div>
                                 <div class="modal-body">
                                     <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
                                             frameborder="0" allowfullscreen></iframe>
@@ -47,19 +40,26 @@
                     <!-- /.modal -->
 
                 </div>
+                <div class="appleButton col-md-2 col-sm-6 col-xs-offset-0">
+                    <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"></a>
+                </div>
+            </div>
+            <div class="row jumbotron">
+                <p>
+                    Literature student Anastasia Steele's life changes forever when she meets handsome, yet
+                    tormented, billionaire Christian Grey.
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4  col-sm-4 col-xs-12">
+            <div class="thumbnail">
+                <img src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
             </div>
         </div>
     </div>
-    <div class="col-md-2 col-sm-1 col-xs-offset-0"></div>
-    <div class="col-md-4  col-sm-3 col-xs-12">
-        <div class="thumbnail">
-            <img src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
-        </div>
+
+    <div class="row bottomPage">
+
     </div>
-</div>
-
-<div class="row bottomPage">
-
-</div>
 
 </div>
