--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -1,6 +1,6 @@
 ﻿<div ng-include="'views/navbar.html'"></div>
 
-
+<div class="background-image"></div>
 <div class="container-fluid">
     <div class="row topPage">
     </div>
@@ -46,8 +46,14 @@
             </div>
             <div class="row jumbotron">
                 <p>
-                    Literature student Anastasia Steele's life changes forever when she meets handsome, yet
-                    tormented, billionaire Christian Grey.
+                    When Anastasia Steele, a literature student, goes to interview the wealthy Christian Grey as a favor
+                    to her roommate Kate Kavanagh, she encounters a beautiful, brilliant and intimidating man. The
+                    innocent and naive Ana starts to realize she wants him. Despite his enigmatic reserve and advice,
+                    she finds herself desperate to get close to him. Not able to resist Ana's beauty and independent
+                    spirit, Christian Grey admits he wants her too, but on his own terms. Ana hesitates as she discovers
+                    the singular tastes of Christian Grey - despite the embellishments of success, his multinational
+                    businesses, his vast wealth, and his loving family, Grey is consumed by the need to control
+                    everything.
                 </p>
             </div>
         </div>
