ModifiÃ© les images pour specifier leur classe "thumbnail" directement

--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -56,11 +56,8 @@
                 </p>
             </div>
         </div>
-        <div class="col-md-4  col-sm-4 col-xs-12">
-            <div class="thumbnail">
-                <img src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
-            </div>
-        </div>
+        <img class="thumbnail col-md-4  col-sm-4 col-xs-12"
+             src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
     </div>
 
 </div>
