--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -79,11 +79,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="thumbnail">
-                <img src="http://www.gstatic.com/tv/thumb/tvbanners/184338/p184338_b_v7_ac.jpg">
-            </div>
-        </div>
+        <img class="thumbnail col-md-4 col-sm-4 col-xs-12"
+             src="http://www.gstatic.com/tv/thumb/tvbanners/184338/p184338_b_v7_ac.jpg">
     </div>
 </div>
 </div>
