--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -1,7 +1,7 @@
 <div ng-include="'views/navbar.html'"></div>
 
 <div class="background-image"></div>
-<div class="container-fluid">
+<div class="container-fluid main-container">
     <div class="row topPage">
     </div>
     <div class="row">
