--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,6 @@
 <div ng-include="'views/navbar.html'"></div>
 
-<div class="container">
+<div class="container main-container">
 
     <div class="row">
         <div class="col col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
