--- a/public/views/movie.html
+++ b/public/views/movie.html
@@ -1,6 +1,6 @@
 ﻿<div ng-include="'views/navbar.html'"></div>
 
-<div class="container-fluid">
+<div class="container-fluid main-container">
     <div class="row topPage">
     </div>
     <div class="row">
